Working on putting all vis together

--- a/Homework2/datomassi/vis/react-d3/src/App.css
+++ b/Homework2/datomassi/vis/react-d3/src/App.css
@@ -42,3 +42,9 @@
   min-height: 50px;
   background-color: white;
 }
+
+#wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
