multi-line plot w/ mouseover functionality (still debugging this part)

--- a/Homework2/Templates/es6-webpack-template/node/src/css/styles.css
+++ b/Homework2/Templates/es6-webpack-template/node/src/css/styles.css
@@ -1,7 +1,23 @@
 h1 {
-    color: red;
+    color: darkslategrey;
 }
 
-#bar{
-    font-size: 20px;
+svg {
+    font-family: Sans-Serif, Arial;
+}
+.line {
+  stroke-width: 2;
+  fill: none;
+}
+
+.axis path {
+  stroke: black;
+}
+
+.text {
+  font-size: 12px;
+}
+
+.title-text {
+  font-size: 12px;
 }
