--- a/Homework2/Templates/es6-webpack-template/node/src/css/styles.css
+++ b/Homework2/Templates/es6-webpack-template/node/src/css/styles.css
@@ -1,3 +1,11 @@
 h1 {
-    color: red;
+    color: rgb(16, 6, 77);
+}
+.myclass{
+    color: rgb(64, 63, 68);
+}
+body {
+    background-color:rgb(253, 240, 215);
+    color: rgb(9, 12, 139);
+
 }
