--- a/Homework2/Templates/simple-template/index.html
+++ b/Homework2/Templates/simple-template/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>ECS 272 InfoVis Assignment 3</title>
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <style>
-      #tooltip {
-        min-width: 100px;
-        min-height: 50px;
-        background-color: white;
-      }
+        #tooltip {
+            min-width: 100px;
+            min-height: 50px;
+            background-color: white;
+        }
     </style>
-  </head>
-  <body>
+</head>
+
+<body>
     <h2>ECS 272 Assignment 3 D3 Template</h2>
-    <div id="container"> <div id="tooltip"></div></div>
+    <div id="container">
+        <div id="tooltip"></div>
+    </div>
     <script src="main.js"></script>
-  </body>
+</body>
+
 </html>
