--- a/Homework2/pwchi/src/css/App.css
+++ b/Homework2/pwchi/src/css/App.css
@@ -1,5 +1,9 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+h1 {
+  font-family: "Roboto";
 }
